--- a/section5/investment-calculator-app/src/index.css
+++ b/section5/investment-calculator-app/src/index.css
@@ -31,7 +31,7 @@ body {
   font-size: 1.5rem;
 }
 
-#user-input {
+#inputGroup {
   padding: 2rem;
   max-width: 30rem;
   margin: 2rem auto;
@@ -45,18 +45,14 @@ body {
   gap: 1.5rem;
 }
 
-.flex-item {
+.user-input {
   flex: 0 0 calc(50% - 0.75rem);
-  height: calc(50% - 0.75rem);
-  box-sizing: border-box;
-  border: 1px solid #333;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 24px;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-#user-input label {
+.user-input label {
   display: block;
   margin-bottom: 0.25rem;
   font-family: 'Roboto Condensed', sans-serif;
@@ -65,7 +61,7 @@ body {
   text-transform: uppercase;
 }
 
-#user-input input {
+.user-input input {
   width: 100%;
   padding: 0.5rem;
   border: 1px solid #76c0ae;
