--- a/section6/reactart-css-project/src/components/Header.module.css
+++ b/section6/reactart-css-project/src/components/Header.module.css
@@ -25,8 +25,14 @@ header h1 {
     margin: 0;
 }
 
-header p {
+.paragraph {
     text-align: center;
     color: #a39191;
     margin: 0;
+}
+
+@media (min-width: 768px) {
+    header {
+        margin-bottom: 4rem;
+    }
 }
