Add css modules and navigate users to project form uppon btn click

--- a/section9/project-manager-app/src/index.css
+++ b/section9/project-manager-app/src/index.css
@@ -51,3 +51,20 @@ h6 {
     display: flex;
     height: 100vh;
 }
+
+.main-content {
+    flex: 1;
+    background-color: white;
+    color: black;
+    display: flex;
+    justify-content: center;
+    padding-top: 10rem;
+}
+
+.main-content h2 {
+    margin-bottom: 20px
+}
+
+.main-content p {
+    color: #666;
+}
