Finish core functionality

--- a/section9/project-manager-app/src/components/ProjectForm.module.css
+++ b/section9/project-manager-app/src/components/ProjectForm.module.css
@@ -1,7 +1,8 @@
 .project-form {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 75vw;
+    padding: 5rem 10rem;
 }
 
 .form-buttons {
