--- a/section9/project-manager-app/src/components/ProjectDetails.module.css
+++ b/section9/project-manager-app/src/components/ProjectDetails.module.css
@@ -1,6 +1,8 @@
 .project-details {
-    padding: 5rem;
+    padding: 5rem 15rem;
+    margin-top: 3rem;
     background-color: #f9f9f9;
+    width: 75vw;
 }
 
 .details-header {
