Add individual input validations

--- a/section9/project-manager-app/src/components/InputGroup.module.css
+++ b/section9/project-manager-app/src/components/InputGroup.module.css
@@ -19,3 +19,15 @@
     height: 100px;
     resize: vertical;
 }
+
+.invalid label {
+    color: red;
+}
+
+.invalid input {
+    border-color: red;
+}
+
+.invalid span {
+    color: red;
+}
