Add form validation and finish some final tweaks

--- a/section9/project-manager-app/src/components/ProjectDetails.module.css
+++ b/section9/project-manager-app/src/components/ProjectDetails.module.css
@@ -3,6 +3,8 @@
     margin-top: 3rem;
     background-color: #f9f9f9;
     width: 75vw;
+    height: 85vh;
+    overflow-y: auto;
 }
 
 .details-header {
