--- a/section31/react-crash-course/src/routes/NewPost.module.css
+++ b/section31/react-crash-course/src/routes/NewPost.module.css
@@ -4,6 +4,10 @@
     width: 20rem;
 }
 
+.form .control {
+    margin: 2rem 0;
+}
+
 .form label {
     display: block;
     margin-bottom: 0.05rem;
@@ -26,6 +30,7 @@
 .actions {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     gap: 0.5rem;
 }
 
@@ -43,10 +48,12 @@
     background-color: #23014a;
 }
 
-.actions button[type='button'] {
+.actions a {
     background-color: transparent;
+    text-decoration: none;
+    color: #e5d5f7;
 }
 
-.actions button[type='button']:hover {
+.actions a:hover {
     color: #d1bee6;
 }
